--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -73,18 +73,66 @@
                         <li><a href="">upcoming</a></li>
                     </ul>
                 </nav>
-                <div class="img-portfolio">
-                    <div class="left-img">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p1.jpg.webp" alt="">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p5.jpg.webp" alt="">
-                    </div>
-                    <div class="right-img">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p4.jpg.webp" alt="">
-                        <div class="right-img-head">
-                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p2.jpg.webp" alt="">
-                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p3.jpg.webp" alt="">
+                <div class="ana-portfolio">
+                    <div class="img-p">
+                        <div class="left-p">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p1.jpg.webp" alt="">
+                            <div class="hover-p">
+                                <div class="txt-p">
+                                    <h3>Lens Mockup Design</h3>
+                                    <span>Art,Illustration</span>
+                                </div>
+                            </div>
                         </div>
-                        <img id="img-3" src="https://preview.colorlib.com/theme/breed2/img/portfolio/p6.jpg.webp" alt="">
+                        <div class="left-p-2">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p4.jpg.webp" alt="">
+                            <div class="hover-p">
+                                <div class="txt-p">
+                                    <h3>Lens Mockup Design</h3>
+                                    <span>Art,Illustration</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right-p">
+                        <div class="right-p-top">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p5.jpg.webp" alt="">
+                            <div class="hover-p">
+                                <div class="txt-p">
+                                    <h3>Lens Mockup Design</h3>
+                                    <span>Art,Illustration</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right-p-middle">
+                            <div class="left-middle">
+                                <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p2.jpg.webp" alt="">
+                                <div class="hover-p">
+                                    <div class="txt-p">
+                                        <h3>Lens Mockup Design</h3>
+                                        <span>Art,Illustration</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-middle">
+                                <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p3.jpg.webp" alt="">
+                                <div class="hover-p">
+                                    <div class="txt-p">
+                                        <h3>Lens Mockup Design</h3>
+                                        <span>Art,Illustration</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="right-down">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/portfolio/p6.jpg.webp" alt="">
+                            <div class="hover-p">
+                                <div class="txt-p">
+                                    <h3>Lens Mockup Design</h3>
+                                    <span>Art,Illustration</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,7 +145,9 @@
                 </h2>
                 <div class="down-blog">
                     <div class="cards">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/b1.jpg.webp" alt="">
+                        <div class="img-div">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/b1.jpg.webp" alt="">
+                        </div>
                         <div id="head-card">
                             <i class="fa-solid fa-user-tie"></i>
                             <span>admin post</span>
@@ -113,7 +163,9 @@
                         </div>
                     </div>
                     <div class="cards">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/b2.jpg.webp" alt="">
+                        <div class="img-div">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/b2.jpg.webp" alt="">
+                        </div>
                         <div id="head-card">
                             <i class="fa-solid fa-user-tie"></i>
                             <span>admin post</span>
@@ -128,7 +180,9 @@
                         </div>
                     </div>
                     <div class="cards">
-                        <img src="https://preview.colorlib.com/theme/breed2/img/b3.jpg.webp" alt="">
+                        <div class="img-div">
+                            <img src="https://preview.colorlib.com/theme/breed2/img/b3.jpg.webp" alt="">
+                        </div>
                         <div id="head-card">
                             <i class="fa-solid fa-user-tie"></i>
                             <span>admin post</span>
@@ -196,7 +250,7 @@
                         </li>
                     </ul>
                 </nav>
-                <p>Copyright ©2024 All rights reserved | This template is made with  by Colorlib</p>
+                <p>Copyright ©2024 All rights reserved | This template is made with by Colorlib</p>
             </div>
         </div>
     </footer>
